# kindle2image

./: .gitignore  README.md  pyproject.toml
src/kindle2image/: __init__.py  kindle.py  main.py  utils.py
