[project]
name = "kindle2image"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mrsekut", email = "k.cloudspider@gmail.com" }
]
dependencies = [
    "pyautogui>=0.9.54",
    "pyobjc>=10.3.1",
    "types-pyautogui>=0.9.3.20240406",
    "argparse>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kindle2image"]
